bindata/network/ovn-kubernetes/common/debug.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: trozet-tcpdump
  namespace: openshift-ovn-kubernetes
  labels:
    k8s-app: trozet-tcpdump
spec:
  selector:
    matchLabels:
      name: trozet-tcpdump
  template:
    metadata:
      labels:
        name: trozet-tcpdump
    spec:
      hostNetwork: true
      hostPID: true
      serviceAccountName: ovn-kubernetes-node
      priorityClassName: "system-node-critical"
      containers:
        - name: trozet-tcpdump
          image: docker.io/centos/tools:latest
          command: [ "/usr/sbin/tcpdump", "-i", "any", "port", "6443", "-w", "/var/log/tcpdump/tcpdump.pcap" ]
          volumeMounts:
            - mountPath: /var/log/tcpdump
              name: node-tcpdump
          securityContext:
            privileged: true
        - name: conntrack-dump
          image: docker.io/centos/tools:latest
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "while true; do sleep 1 && date && conntrack -L | grep 6443; done;" ]
          securityContext:
            privileged: true
      terminationGracePeriodSeconds: 30
      volumes:
        - name: node-tcpdump
          hostPath:
            path: /var/log/tcpdump
      nodeSelector:
        beta.kubernetes.io/os: "linux"
      tolerations:
        - operator: "Exists"
