bindata/network/ovn-kubernetes/common/monitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ovnkube-master
  name: ovn-kubernetes-master
  namespace: openshift-ovn-kubernetes
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ovn-master-metrics-cert
spec:
  selector:
    app: ovnkube-master
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: metrics
    port: 9102
    protocol: TCP
    targetPort: 9102
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ovnkube-node
  name: ovn-kubernetes-node
  namespace: openshift-ovn-kubernetes
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ovn-node-metrics-cert
spec:
  selector:
    app: ovnkube-node
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: metrics
    port: 9103
    protocol: TCP
    targetPort: 9103
  - name: ovn-metrics
    port: 9105
    protocol: TCP
    targetPort: 9105
  sessionAffinity: None
  type: ClusterIP
